--- a/Desktop/dateinmystate/src/App.css
+++ b/Desktop/dateinmystate/src/App.css
@@ -5,6 +5,10 @@
 .navbar {
   background-color:black;
 }
+
+a:hover{
+  color: pink;
+}
 .App-header {
   background-color: white;
   min-height: 100vh;
