--- a/Desktop/dateinmystate/src/App.css
+++ b/Desktop/dateinmystate/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .navbar {
-  background-color:black;
+  background-color:rgba(199, 20, 20, 0.753);
 }
 
 a:hover{
@@ -11,6 +11,7 @@ a:hover{
 }
 .App-header {
   background-color: white;
+  background-image: url("collage.jpeg");
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -18,6 +19,12 @@ a:hover{
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
+}
+
+.rectangle{
+  height:700px;
+  width: 700px;
+  background-color: white;
 }
 
 a {
