--- a/Desktop/dateinmystate/src/App.css
+++ b/Desktop/dateinmystate/src/App.css
@@ -3,11 +3,13 @@
 }
 
 .navbar {
-  background-color:rgba(199, 20, 20, 0.753);
+  background-color:rgba(205, 223, 171, 0.753);
+  padding: 10px;
+  
 }
 
 a:hover{
-  color: pink;
+  color: darkgreen;
 }
 .App-header {
   background-color: white;
@@ -28,5 +30,13 @@ a:hover{
 }
 
 a {
-  color: white;
+  color: black;
+  padding: 10px;
+  height: 20px;
+  text-align: center;
 }
+
+.dropdown-menu{
+  text-align: center;
+}
+
